src/test/deca/syntax/invalid/method_body/test_method_body_call_method_wrong_name.deca
// Description:
//    Programme minimaliste creant une classe
//
// Resultats:
//   no viable alternative at input 'voidprint'
// Historique:
//    cree le 01/01/2024

class A {   
    void print(int a) {
        this.f(a);
    }
    void f(int a) {
        print(a);
    }
}
